# rust-axum-services-template

./: .env.example  .gitignore  compose.yaml
auth_service/: Cargo.toml  Dockerfile
auth_service/migrations/: 20250921135102_create_users.sql
auth_service/src/: app.rs  config.rs  db.rs  error.rs  logging.rs  main.rs
auth_service/src/common/: error.rs  state.rs
auth_service/src/middleware/: cors.rs  trace.rs
auth_service/src/middlewares/: cors.rs  trace.rs
auth_service/src/routes/: health.rs  register.rs
