[package]
name = "auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
dotenvy = "0.15.7"
num_cpus = "1.17.0"
rand = "0.8"
serde = "1.0.226"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
tokio = { version = "1.47.1", features = ["full"]}
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[dev-dependencies]
sqlx-cli = { version = "0.8.6", default-features = false, features = ["postgres"] }
